projects/deja-js/component/v2/numeric-stepper/numeric-stepper.component.scss
[deja-numeric-stepper-container] .mat-form-field,
[deja-numeric-stepper-form-field] {
    .mat-form-field-infix {
        display: inline-flex;
        justify-content: center;
        align-items: center;
    }

    &[deja-numeric-stepper-form-field="vertical"] {

        &:not(.disabled) {

            &:hover {
                .mat-form-field-label-wrapper {
                    opacity: 0 !important;
                }

                &.mat-form-field-invalid {
                    .mat-form-field-subscript-wrapper {
                        visibility: hidden;
                    }
                }
            }
        }
    }

    &[deja-numeric-stepper-form-field="horizontal-inlay"] {
        &:not(.disabled) {

            &:hover {
                &[inputAutosizeFormField] {
                    .mat-form-field-infix {
                        padding: 1em 23px;
                    }

                    &.mat-form-field-appearance-outline {
                        .mat-form-field-infix {
                            padding: 1em 18px;
                        }
                    }
                }

                &:not([inputAutosizeFormField]) {
                    input {
                        margin: 0 30px;
                    }

                    &.mat-form-field-appearance-fill {
                        input {
                            margin: 0 18px;
                        }
                    }
                }
            }
        }
    }

    .noselect {
        -webkit-touch-callout: none;
        /* iOS Safari */
        -webkit-user-select: none;
        /* Chrome/Safari/Opera */
        -khtml-user-select: none;
        /* Konqueror */
        -moz-user-select: none;
        /* Firefox */
        -ms-user-select: none;
        /* Internet Explorer/Edge */
        user-select: none;
        /* Non-prefixed version, currently
           not supported by any browser */
    }

    * {
        transition: opacity 250ms ease-out;
    }

    input::-webkit-inner-spin-button,
    input::-webkit-outer-spin-button {
        -webkit-appearance: none !important;
        margin: 0 !important;
        -moz-appearance: textfield !important;
    }

    .mat-input-element {
        text-align: center;
    }

    &:not(.disabled) {

        &:hover {

            .arrow,
            .shadow {
                opacity: 1;
            }

            .mat-form-field-outline,
            .mat-form-field-outline-thick,
            .mat-form-field-underline {
                opacity: 0 !important;
            }

            .mat-form-field-label-wrapper,
            input {
                z-index: 10001;
            }

            input {
                position: relative;
            }
        }

        &:hover,
        &[hover] {

            .arrow,
            .shadow {
                visibility: visible;
            }
        }
    }

    deja-numeric-stepper {
        position: relative;
        z-index: 10000;

        .arrow,
        .shadow {
            position: absolute;
            visibility: hidden;
            opacity: 0;
        }

        .arrow {
            cursor: pointer;
            display: flex;
            justify-content: center;
            align-items: center;
            box-sizing: border-box;
            z-index: 10002;
            height: 32px;
            width: 32px;
        }

        .shadow {
            border-radius: 4px;
            box-shadow: 0px 2px 4px rgba(#000, 0.3);
        }

        .increment {
            border-radius: 4px 4px 0 0;
        }

        .decrement {
            border-radius: 0 0 4px 4px;
        }

        &[layout="horizontal"],
        &[layout="horizontal-inlay"] {
            .increment {
                border-radius: 0 4px 4px 0;
            }

            .decrement {
                border-radius: 4px 0 0 4px;
            }
        }

        .shadow::after {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }
    }
}

